# HERALD

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_articles.py  0002_gdelt.py
scripts/: bootstrap_db.py  bootstrap_db.sh
services/backfill/: Dockerfile  backfill.py  publishers.yaml  upsert.py
services/extractor/: Dockerfile  extract.py  worker.py
services/feed_poller/: Dockerfile  config.py  dedup.py  poller.py
services/gdelt_ingestor/: Dockerfile  downloader.py  ingestor.py  parser.py
services/maintenance/: Dockerfile  worker.py
services/mcp_server/: Dockerfile  db.py  gdelt_client.py  server.py
services/mcp_server/tools/: articles.py  gdelt.py
shared/: __init__.py  logging.py  models.py  settings.py  utils.py
sources/: feeds.yaml  gdelt_themes.yaml
tests/: test_dedup.py  test_extract.py  test_feed_config.py  test_gdelt_parser.py  test_settings.py  test_utils.py
