[project]
name = "herald"
version = "0.1.0"
description = "Highly Extensible Aggregator for Real-time Linked Data — self-hosted news aggregation pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "HERALD contributors" }]

dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "structlog>=24.1",
    "alembic>=1.13",
]

[project.optional-dependencies]
poller = [
    "feedparser>=6.0",
    "tldextract>=5.1",
]
extractor = [
    "trafilatura>=1.12",
    "lxml>=5.2",
]
mcp = [
    "fastmcp>=0.2.0",
]
migrations = [
    "alembic>=1.13",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "alembic>=1.13",
    "feedparser>=6.0",
    "tldextract>=5.1",
    "trafilatura>=1.12",
    "lxml>=5.2",
    "fastmcp>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
